--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 objex (0.3.1); urgency=low
 
+ * add the `skipDynamicMixing` option for Objex.mixin to skip dynamic mixing
+
+ -- Phillip Kovalev <twilightfeel@gmail.com>  Fri, 16 May 2014 15:34:12 +0400
+
+objex (0.3.1); urgency=low
+
  * add methods Objex.isParentOf and Objex.isInheritorOf
 
  -- Phillip Kovalev <twilightfeel@gmail.com>  Thu, 15 May 2014 16:24:39 +0400
