--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+objex (0.4.0); urgency=low
+
+ * update `extend` dependency to 1.3.0
+ * fix tests and linters warnings
+
+ -- Phillip Kovalev <twilightfeel@gmail.com>  Wed, 23 Jul 2014 14:26:16 +0400
+
 objex (0.3.1); urgency=low
 
  * add the `skipDynamicMixing` option for Objex.mixin to skip dynamic mixing
