--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+objex (0.4.1); urgency=low
+
+ * update dependencies (Mikhail Baranov)
+
+ -- Phillip Kovalev <twilightfeel@gmail.com>  Wed, 15 Jul 2015 12:36:21 +0300
+
 objex (0.4.0); urgency=low
 
  * update `extend` dependency to 1.3.0
